// This file is part of Kpapp for iOS.

/* Library Refresh Error */
"library_refresh_error.retrieve.description" = "Error retrieving catalog data.";
/* Library Refresh Error */
"library_refresh_error.parse.description" = "Error parsing catalog data.";
/* Library Refresh Error */
"library_refresh_error.process.description" = "Error processing catalog data.";

"download_service.complete.title" = "Download Completed";
"download_service.complete.description" = "%@ has been downloaded successfully.";
"download_service.failed.description" = "Unable to download this file.";
"download_service.error.description" = "Download failed to succeed. Code: %@\n Description: %@";
"download_service.error.option_directory" = "download directory cannot be found";
"download_service.error.option_invalid_taskid" = "invalid downloadTask id";
"download_service.error.option_invalid_response" = "invalid response";
"download_service.error.option_unable_to_move_file" = "unable to move downloaded file";

"common.dialog.button.open" = "Open";
"common.dialog.button.open_in_new_tab" = "Open in New Tab";
"common.dialog.button.add_bookmark" = "Add Bookmark";
"common.dialog.button.remove_bookmark" = "Remove Bookmark";
"common.dialog.button.show_bookmarks" = "Show Bookmarks";
"common.dialog.button.bookmark" = "Bookmark";

"common.button.go_back" = "Go Back";
"common.button.go_forward" = "Go Forward";
"common.button.done" = "Done";
"common.button.cancel" = "Cancel";
"common.button.ok" = "Ok";
"common.button.yes" = "Yes";
"common.button.no" = "no";
"common.button.print" = "Print";
"common.button.copy" = "Copy";
"common.button.copied" = "Copied";
"common.button.share" = "Share";
"common.button.share_as_pdf" = "Share as PDF";
"common.search" = "Search";

"common.tab.manager.title" = "Tabs Manager";
"common.tab.navigation.title" = "Tabs";
"common.tab.menu.new_tab" = "New Tab";
"common.tab.menu.close_this" = "Close This Tab";
"common.tab.menu.close_all" = "Close All Tabs";
"common.tab.list.close" = "Close Tab";
"common.tab.menu.library" = "Library";
"common.tab.menu.settings" = "Settings";
"common.export_file.alert.title" = "Export file";
"common.export_file.alert.description" = "Do you want to export the file %@?";
"common.export_file.alert.button.title" = "Export";

"outline_button.outline.title" = "Outline";
"outline_button.outline.help" = "Show article outline";
"outline_button.outline.empty.message" = "No outline available";

"bookmark_button.show.help" = "Show the bookmark sheet, where the current article can be added or removed from bookmarks.";

"article_shortcut.main.button.title" = "Main Article";
"article_shortcut.main.button.help" = "Show main article";
"article_shortcut.random.button.title.mac" = "Random Article";
"article_shortcut.random.button.title.ios" = "Random Page";
"article_shortcut.random.button.help" = "Show random article";

"alert_handler.alert.failed.title" = "Unable to load the article requested.";

"bookmark_context_menu.view.title" = "View";
"bookmark_context_menu.remove.title" = "Remove";

"external_link_handler.alert.title" = "External Link";
"external_link_handler.alert.button.load.link" = "Load the link";
"external_link_handler.alert.ask.description" = "An external link is tapped, do you wish to load the link?";
"external_link_handler.alert.not_loading.description" = "An external link is tapped. However, your current setting does not allow it to be loaded.";
"file_import.alert.no_open.title" = "Unable to open file";
"file_import.alert.no_open.message" = "%@ cannot be opened.";

"attribute.detail.unknown" = "Unknown";

"download_task_cell.status.failed" = "Failed";
"download_task_cell.status.downloading" = "Downloading...";
"download_task_cell.status.paused" = "Paused";

"flavor_tag.help.max" = "everything except large media files like video/audio";
"flavor_tag.help.no_pic" = "most pictures have been removed";
"flavor_tag.help.mini" = "only a subset of the text is available, probably the first section";

"library_refresh_time.last" = "Just Now";
"library_refresh_time.never" = "Never";

"zim_file_cell.article_count.suffix" = "articles";

"zim_file_missing_indicator.help" = "Zim file is missing.";

"hotspot.action.start_hotspot.title" = "Start Hotspot";
"hotspot.action.stop_hotspot.title" = "Stop Hotspot";
"hotspot.settings.port_number" = "Port number";
"hotspot.settings.recommended_port_range" = "The network port used by the Hotspot, should be between %@ and %@";
"hotspot.error.port_already_used_by_another_app_title" = "Hotspot can't start because port %@ is in use.";
"hotspot.error.port_already_used_by_another_app_description" = "To fix this, close the app using it or change the Kpapp Hotspot port in settings.";
"hotspot.server_full_explanation" = "To browse these ZIM files on other devices, make sure all devices are either on the same WiFi network or connected to your Personal Hotspot.";
"hotspot.server_active_warning" = "The hotspot stays active only while the app is open and in use.";
"hotspot.server_wifi_only_explanation" = "To browse these ZIM files on other devices, make sure all devices are on the same WiFi network.";
"library.zim_file_details.side_panel.message" = "Select a ZIM file to see details";
"library.zim_file_context.main_page.label" = "Main Page";
"library.zim_file_context.random.label" = "Random Page";
"library.zim_file_context.copy_url" = "Copy URL";

"zim_file_opened.overlay.no-opened.message" = "No opened ZIM file";
"zim_file_opened.toolbar.show_sidebar.label" = "Show Sidebar";
"zim_file_opened.toolbar.open.title" = "Open...";
"zim_file_opened.toolbar.open.help" = "Open a ZIM file";
"zim_file_category.title" = "Category";

"zim_file_catalog.fetching.message" = "Fetching Catalog ...";
"zim_file_category.section.empty.message" = "No ZIM file under this category.";
"zim_file_downloads.overlay.empty.message" = "No download tasks";
"zim_file_downloads.toolbar.show_sidebar.label" = "Show Sidebar";

"zim_file_new_overlay.empty" = "No new ZIM file";
"zim_file_new.button.refresh" = "Refresh";

"zim_file.list.name.text" = "Name";
"zim_file.list.description.text" = "Description";
"zim_file.list.actions.text" = "Actions";
"zim_file.list.info.text" = "Info";
"zim_file.action.locate.title" = "Locate";
"zim_file.action.open_main_page.title" = "Open Main Page";
"zim_file.action.reveal_in_finder.title" = "Reveal in Finder";
"zim_file.action.toggle_cellular" = "Download using cellular";
"zim_file.action.unlink.title" = "Unlink";
"zim_file.action.unlink.message" = "All bookmarked articles linked to this ZIM file will be deleted, but the original file will remain in place.";
"zim_file.action.unlink.multi_title" = "Unlink %@ ZIM files";
"zim_file.action.unlink.multi_message" = "All bookmarked articles linked to these %@ ZIM files will be deleted, but the original files will remain in place.";
"zim_file.action.unlink.button.title" = "Unlink";
"zim_file.action.delete.title" = "Delete";
"zim_file.action.delete.message" = "The ZIM file and all bookmarked articles linked to this ZIM file will be deleted.";
"zim_file.action.delete.button.title" = "Delete";
"zim_file.action.download.title" = "Download";
"zim_file.action.download.warning.title" = "Space Warning";
"zim_file.action.download.warning.message" = "There might not be enough space on your device for this ZIM file.";
"zim_file.action.download.warning.message1" = "There would be less than 1GB space left after the ZIM file is downloaded.";
"zim_file.action.download.button.anyway" = "Download Anyway";
"zim_file.base_info.attribute.language" = "Language";
"zim_file.base_info.attribute.category" = "Category";
"zim_file.base_info.attribute.size" = "Size";
"zim_file.base_info.attribute.created" = "Created";
"zim_file.bool_info.pictures" = "Pictures";
"zim_file.bool_info.videos"  = "Videos";
"zim_file.bool_info.details" = "Details";
"zim_file.bool_info.require_service_workers" = "Requires Service Workers";
"zim_file.counts.article_count" = "Article Count";
"zim_file.counts.article.media_count" = "Media Count";
"zim_file.detail.id.title" = "ID";
"zim_file.download_task.action.title.cancel" = "Cancel";
"zim_file.download_task.action.try_recover" = "Try to Recover";
"zim_file.download_task.action.failed" = "Failed";
"zim_file.download_task.action.pause" = "Pause";
"zim_file.download_task.action.downloading" = "Downloading...";
"zim_file.download_task.action.resume" = "Resume";
"zim_file.download_task.action.paused" = "Paused";
"service_worker_warning.label.description" = "Zim files requiring service workers are not supported.";
"multi.zim_files_selected.sidebar_title" = "Selected";
"multi.zim_files_selected.description_count" = "ZIM files";

"theme_settings.title" = "Theme";
"theme_settings.option.dark" = "Dark";
"theme_settings.option.light" = "Light";
"theme_settings.option.system" = "System";
"reading_settings.zoom.title" = "Page zoom";
"reading_settings.zoom.reset.button" = "Reset";
"reading_settings.external_link.title" = "External Link";
"reading_settings.search_snippet.title" = "Search snippet";
"reading_settings.tab.reading" = "Reading";
"library_settings.catalog.title" = "Catalog";
"library_settings.downloads.title" = "Downloads";
"library_settings.button.refresh_now" = "Refresh Now";
"library_settings.last_refresh.text" = "Last refresh";
"library_settings.auto_refresh.toggle" = "Auto refresh";
"library_settings.catalog_warning.text" = "When enabled, the library catalog will be refreshed automatically when outdated.";
"library_settings.languages.title" = "Languages";
"settings.navigation.title" = "Settings";
"library_settings.toggle.cellular" = "Download using cellular";
"library_settings.new-download-task-description" = "Change will only apply to new download tasks.";
"catalog_settings.last_refresh.text" = "Last refresh";
"catalog_settings.refreshing.text" = "Refreshing...";
"catalog_settings.refresh_now.button" = "Refresh Now";
"catalog_settings.auto_refresh.toggle" = "Auto refresh";
"catalog_settings.header.text" = "Catalog";
"catalog_settings.footer.text" = "When enabled, the library catalog will be refreshed automatically when outdated.";
"backup_settings.toggle.title" = "Include ZIM files in backup";
"backup_settings.header.text" = "Backup";
"backup_settings.footer.text" = "Does not apply to files opened in place.";
"settings.miscellaneous.title" = "Misc";
"settings.miscellaneous.button.feedback" = "Feedback";
"settings.miscellaneous.button.rate_app" = "Rate the App";
"settings.miscellaneous.navigation.about" = "About";
"settings.selected_language.title" = "Languages";
"language_selector.name.title" = "Name";
"language_selector.count.table.title" = "Count";
"language_selector.no_language.title" = "No language";
"language_selector.showing.header" = "Showing";
"language_selector.hiding.header" = "Hiding";
"language_selector.navitation.title" = "Language";
"language_selector.toolbar.sorting" = "Sorting";

"settings.about.title" = "About";
"settings.about.release" = "Release";
"settings.about.dependencies" = "Dependencies";
"settings.about.dependencies.name" = "Name";
"settings.about.dependencies.license" = "License";
"settings.about.dependencies.version" = "Version";
"settings.about.description" = "Kpapp is an offline reader for online content like Wikipedia, Project Gutenberg, or TED Talks. It makes knowledge available to people with no or limited internet access. The software as well as the content is free to use for anyone.";
"settings.about.license-description" = "This app is released under the terms of the GNU General Public License version 3.";
"settings.about.appverion.title" = "Version";
"settings.about.build.title" = "Build";
"settings.about.our_website.button" = "Our Website";
"settings.about.source.title" = "Source";
"settings.about.button.license" = "GNU General Public License v3";

"bookmark.navigation.title" = "Bookmarks";
"bookmark.overlay.empty.title" = "No bookmarks";
"bookmark.toolbar.show_sidebar.label" = "Show Sidebar";

"browser_tab.toolbar.show_sidebar.label" = "Show Sidebar";

"search_result.zimfile.empty.message" = "No opened ZIM file";
"search_result.zimfile.no_result.message" = "No result";
"search_result.sidebar.button.remove" = "Remove";
"search_result.header.text" = "Recent Search";
"search_result.button.clear" = "Clear";
"search_result.filter_hearder.text" = "Included in Search";
"search_result.filter_hearder.button.none" = "None";
"search_result.filter_hearder.button.all" = "All";

"welcome.main_page.title" = "Main Page";
"welcome.grid.bookmarks.title" = "Bookmarks";
"welcome.actions.open_file" = "Open File";
"welcome.loading.data.text" = "Loading Data...";
"welcome.button.status.fetching_catalog.text" = "Fetching Catalog...";
"welcome.button.status.fetch_catalog.text" = "Fetch Catalog";

"commands.button.actual_size" = "Actual Size";
"comments.button.zoom_in" = "Zoom In";
"comments.button.zoom_out" = "Zoom Out";

"app_macos_commands.open_file" = "Open...";
"app_macos_commands.new" = "New Tab";
"app_macos_navigation.button.library" = "Library";

"sidebar_view.navigation.button.close_all" = "Close All Tabs";
"sidebar_view.navigation.button.close" = "Close";

"enum.category.wikipedia" = "Wikipedia";
"enum.category.wikibooks" = "Wikibooks";
"enum.category.wikinews" = "Wikinews";
"enum.category.wikiquote" = "Wikiquote";
"enum.category.wikisource" = "Wikisource";
"enum.category.wikiversity" = "Wikiversity";
"enum.category.wikivoyage" = "Wikivoyage";
"enum.category.wiktionary" = "Wiktionary";
"enum.category.ted" = "TED";
"enum.category.vikidia" = "Vikidia";
"enum.category.stackexchange" = "StackExchange";
"enum.category.other" = "Other";
"enum.external_link_loading_policy.always_ask" = "Always Ask";
"enum.external_link_loading_policy.always_load" = "Always Load";
"enum.external_link_loading_policy.never_load" = "Never Load";
"enum.flavor.max" = "max";
"enum.flavor.no_pic" = "no pic";
"enum.flavor.mini" = "mini";
"enum.library_language_sorting_model.a-z" = "A-Z";
"enum.library_language_sorting_model.by_count" = "By Count";
"enum.libray_tab_item.opened" = "Opened";
"enum.libray_tab_item.categories" = "Categories";
"enum.libray_tab_item.downloads" = "Downloads";
"enum.libray_tab_item.new" = "New";

"enum.navigation_item.reading" = "Reading";
"enum.navigation_item.bookmarks" = "Bookmarks";
"enum.navigation_item.new_tab" = "New Tab";
"enum.navigation_item.opened" = "Opened";
"enum.navigation_item.categories" = "Categories";
"enum.navigation_item.new" = "New";
"enum.navigation_item.downloads" = "Downloads";
"enum.navigation_item.settings" = "Settings";
"enum.navigation_item.hotspot" = "Hotspot";
"enum.search_result_snippet_mode.disabled" = "Disabled";
"enum.search_result_snippet_mode.matches" = "Matches";

"payment.donate.title" = "Donate";
"payment.description.label" = "Support Kpapp";
"payment.summary_page.title" = "Support Kpapp";
"payment.support_button.label" = "Support Kpapp";
"payment.monthly_support.label" = "Monthly support for Kpapp";
"payment.summary.title" = "Kpapp";
"payment.textfield.custom_amount.label" = "Custom amount";
"payment.confirm.button.title" = "Confirm";
"payment.selection.average_monthly_donation.subtitle" = "Average monthly donation";
"payment.selection.last_year_average.subtitle" = "Last year's average";
"payment.selection.custom_amount" = "Custom amount";
"payment.selection.option.one_time" = "One time";
"payment.selection.option.monthly" = "Monthly";
"payment.support_fallback_message" = "We are sorry, your device does not support Apple Pay.";
"payment.success.title" = "Thank you so much for your donation.";
"payment.success.description" = "Your generosity means everything to us.";
"payment.error.title" = "Well that's awkward.";
"payment.error.description" = "There has been an issue with your payment. Please try again.";
