...
        .popover(isPresented: $isShowingOutline) {
            NavigationStack {
                Group {
                    if itemTree.isEmpty {
                        Message(text: LocalString.outline_button_outline_empty_message)
                    } else {
                        List(itemTree, id: \.id) { item in
                            OutlineNode(item: item) { item in
                                scrollTo(item.id)
                                isShowingOutline = false
                                dismissSearch()
                            }
                        }.listStyle(.plain)
...
